[tool.poetry]
name = "ibobba"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "ibobber"}]

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.2"
pyright = "^1.1.323"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "I"]
target-version = "py311"

[tool.pyright]
# include = ["src"]
# exclude = ["**/node_modules",
#     "**/__pycache__",
#     "src/experimental",
#     "src/typestubs"
# ]
# ignore = ["src/oldstuff"]
# defineConstant = { DEBUG = true }
# stubPath = "src/stubs"
# venv = "env367"

# strict = ["**/*"]

pythonVersion = "3.11"
